feat(fix): allow public order placement for QR flow and update security config
- Modified securityFilterChain to permit public POST requests to /api/orders

- Maintained public GET access for product catalog

- Updated CORS configuration to support local development on port 4200

- Included PATCH and OPTIONS in allowed HTTP methods for frontend compatibility

- Unified SecurityConfig with stateless session management and JWT filter integration